# poetry-man

./: .gitignore  README.md  pyproject.toml
poetry_man/: main.py  prompt.py
